--- a/web/package.json
+++ b/web/package.json
@@ -10,10 +10,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@base-ui/react": "^1.0.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
+    "@hugeicons/core-free-icons": "^2.0.0",
+    "@hugeicons/react": "^1.1.1",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -31,6 +35,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "next-themes": "^0.4.6",
@@ -39,8 +44,11 @@
     "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
+    "react-resizable-panels": "^3.0.6",
+    "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "vaul": "^1.1.2",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
