feat: create all endpoints and tasks

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,29 @@
 DATABASE_URL=
 
-DJANGO_SECRET_KEY=
-DJANGO_SETTINGS_MODULE=core.settings
-
-CELERY_BROKER_URL=amqp://guest:guest@localhost:5672//
-CELERY_RESULT_BACKEND=rpc://
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
 
 FFMPEG_PATH=ffmpeg
 FFMPEG_TIMEOUT=600
 
 WHISPER_MODEL=medium
+DJANGO_SECRET_KEY=
 DEBUG=false
+
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_ACCESS_KEY_ID=
+CLOUDFLARE_SECRET_ACCESS_KEY=
+CLOUDFLARE_BUCKET_NAME=
+
+GEMINI_API_KEY=
+
+STRIPE_SECRET_KEY=sk_
+STRIPE_WEBHOOK_SECRET=whsec_
+ADMIN_API_KEY=your_secret_key
+
+TIKTOK_CLIENT_ID=
+INSTAGRAM_CLIENT_ID=
+YOUTUBE_CLIENT_ID=
+FACEBOOK_CLIENT_ID=
+LINKEDIN_CLIENT_ID=
+TWITTER_CLIENT_ID=
