--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,9 +7,10 @@ redis>=7.1.0
 python-dotenv>=1.2.1
 requests>=2.31.0
 openai-whisper
-Pillow
-google-generativeai
-boto3
-yt-dlp
-opencv-python
-stripe
+google-generativeai>=0.8.0
+boto3>=1.34.0
+yt-dlp>=2024.1.0
+stripe>=10.0.0
+django-redis>=5.4.0
+mediapipe>=0.10.14
+protobuf>=4.25.3,<5.0.0
