fix and feat: add trim video and calendar

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,11 @@ CELERY_RESULT_BACKEND=
 FFMPEG_PATH=ffmpeg
 FFMPEG_TIMEOUT=600
 
+WHISPER_BEAM_SIZE=1
+WHISPER_BEST_OF=1 
+WHISPER_WORD_TIMESTAMPS=True
 WHISPER_MODEL=tiny
+
 DJANGO_SECRET_KEY=
 DEBUG=false
 
