--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,46 @@
 DATABASE_URL=
 
+# Alternative DB config (used when DATABASE_URL is empty)
+DB_NAME=klipai
+DB_USER=klipai
+DB_PASSWORD=klipai
+DB_HOST=localhost
+DB_PORT=5432
+
 CELERY_BROKER_URL=
 CELERY_RESULT_BACKEND=
 
+# Celery worker limits (optional)
+CELERY_TASK_TIME_LIMIT=5400
+CELERY_TASK_SOFT_TIME_LIMIT=5100
+
 FFMPEG_PATH=ffmpeg
 FFMPEG_TIMEOUT=600
+
+# yt-dlp tuning (optional)
+YTDLP_MAX_HEIGHT=720
+YTDLP_CONCURRENT_FRAGMENT_DOWNLOADS=4
+YTDLP_HTTP_CHUNK_SIZE=10485760
+PROXY_URL=
+
+# Clip rendering tuning (optional)
+CLIP_RENDER_MAX_WORKERS=
+CLIP_RENDER_TARGET_HEIGHT=720
 
 WHISPER_BEAM_SIZE=1
 WHISPER_BEST_OF=1 
 WHISPER_WORD_TIMESTAMPS=True
 WHISPER_MODEL=tiny
+
+# Whisper GPU/CPU (optional)
+# Set to "cuda" to enable GPU if available; set to "cpu" (or leave empty) to force CPU
+WHISPER_DEVICE=
+WHISPER_FP16=false
+WHISPER_CUDA_COMPUTE_TYPE=
+WHISPER_MODEL_DIR=
+WHISPER_LOCK_DIR=
+WHISPER_INIT_LOCK_TIMEOUT=600
+WHISPER_MAX_AUDIO_SECONDS=
 
 DJANGO_SECRET_KEY=
 DEBUG=false
@@ -18,8 +49,34 @@ CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_ACCESS_KEY_ID=
 CLOUDFLARE_SECRET_ACCESS_KEY=
 CLOUDFLARE_BUCKET_NAME=
+CLOUDFLARE_R2_PUBLIC_URL=
+
+# R2 client tuning (optional)
+R2_CONNECT_TIMEOUT=10
+R2_READ_TIMEOUT=60
+R2_MAX_ATTEMPTS=5
+R2_MULTIPART_THRESHOLD=8388608
+R2_MULTIPART_CHUNKSIZE=8388608
+R2_MAX_CONCURRENCY=4
 
 GEMINI_API_KEY=
+
+# Gemini Whisper transcript refinement (optional)
+GEMINI_REFINE_WHISPER_TRANSCRIPT=true
+GEMINI_REFINE_MODEL=gemini-2.5-flash-lite
+GEMINI_REFINE_TEMPERATURE=0.2
+GEMINI_REFINE_MAX_SEGMENTS=120
+
+# Gemini analyze tuning (optional)
+GEMINI_ANALYZE_ENABLE_CHUNKING=true
+GEMINI_ANALYZE_CHUNK_SECONDS=600
+GEMINI_ANALYZE_CHUNK_THRESHOLD_SECONDS=1800
+GEMINI_ANALYZE_CHUNK_THRESHOLD_CHARS=45000
+GEMINI_ANALYZE_MAX_OUTPUT_TOKENS=8192
+GEMINI_ANALYZE_REPAIR_MAX_OUTPUT_TOKENS=4096
+
+# Gemini embeddings (optional)
+GEMINI_EMBED_BATCH_SIZE=100
 
 STRIPE_SECRET_KEY=sk_
 STRIPE_WEBHOOK_SECRET=whsec_
@@ -48,3 +105,13 @@ TWITTER_CLIENT_SECRET=
 
 REDIS_URL=redis://127.0.0.1:6379/1
 CLOUDFLARE_R2_PUBLIC_URL=
+
+# Clip selection tuning (optional)
+MIN_TARGET_CLIPS=10
+MAX_TARGET_CLIPS=40
+
+# Reframe / MediaPipe (optional)
+MEDIAPIPE_FACE_MODEL_PATH=
+REFRAME_SAMPLE_EVERY_SECONDS=1.0
+REFRAME_MAX_FACE_SAMPLES=240
+REFRAME_MIN_SAMPLES_TO_STOP=90
