fix: tasks and processing page

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -30,7 +30,7 @@ CLIP_RENDER_TARGET_HEIGHT=720
 WHISPER_BEAM_SIZE=1
 WHISPER_BEST_OF=1 
 WHISPER_WORD_TIMESTAMPS=True
-WHISPER_MODEL=tiny
+WHISPER_MODEL=small
 
 # Whisper GPU/CPU (optional)
 # Set to "cuda" to enable GPU if available; set to "cpu" (or leave empty) to force CPU
